[package]
name = "query-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16.2"
tokio = { version = "1.50.0", features = ["full"] }
termimad = "0.31.1"
ansi-to-tui = "8.0.1"

[[bin]]
name = "query-rs"
path = "src/main.rs"
